Added tech overlay

--- a/index.html
+++ b/index.html
@@ -164,10 +164,42 @@
                 <div class="splide slideshow" id="small-slideshow">
                     <div class="splide__track">
                         <ul class="splide__list slideshow_list">
-                            <li class="splide__slide slide"><img src="/public/img/car/JPG/feature_1.jpg" alt=""></li>
-                            <li class="splide__slide slide"><img src="/public/img/car/JPG/feature_2.jpg" alt=""></li>
-                            <li class="splide__slide slide"><img src="/public/img/car/JPG/feature_3.jpg" alt=""></li>
-                            <li class="splide__slide slide"><img src="/public/img/car/JPG/feature_4.jpg" alt=""></li>
+                            <li class="splide__slide slide first-slide">
+                                <img src="/public/img/car/JPG/feature_1.jpg" alt="">
+                                <div>
+                                    <p>Quad LEDX headlights&trade;</p>
+                                    <svg width="221" height="44" viewBox="0 0 221 44" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M218.891 43.87L126.181 3H0.460938V0H126.821L127.111 0.130005L220.111 41.13L218.891 43.87Z" fill="white"/>
+                                    </svg> 
+                                </div>
+                            </li>
+                            <li class="splide__slide slide second-slide">
+                                <img src="/public/img/car/JPG/feature_2.jpg" alt="">
+                                <div>
+                                    <p>20" ecocarbon&trade; rims</p>
+                                    <svg width="195" height="35" viewBox="0 0 195 35" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M1.23001 34.5051L0 31.8318L60.8573 0.000135601H61.1741L194.5 0V2.97043H61.5096L1.23001 34.5051Z" fill="white"/>
+                                    </svg>                                         
+                                </div>
+                            </li>
+                            <li class="splide__slide slide third-slide">
+                                <img src="/public/img/car/JPG/feature_3.jpg" alt="">
+                                <div>
+                                    <p>Indicating breaklights&trade;</p>
+                                    <svg width="195" height="35" viewBox="0 0 195 35" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M1.23001 34.5051L0 31.8318L60.8573 0.000135601H61.1741L194.5 0V2.97043H61.5096L1.23001 34.5051Z" fill="white"/>
+                                    </svg>                                                                              
+                                </div>
+                            </li>
+                            <li class="splide__slide slide fourth-slide">
+                                <img src="/public/img/car/JPG/feature_4.jpg" alt="">
+                                <div>
+                                    <p>Antiglare&trade; headlights</p>
+                                    <svg width="213" height="65" viewBox="0 0 213 65" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M211.04 64.15L138.06 3.5H0V0.5H139.14L212.96 61.85L211.04 64.15Z" fill="white"/>
+                                    </svg>                                        
+                                </div>
+                            </li>
                         </ul>
                     </div>
                 </div>
