--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                     </div>
                 </div>
                 <div class="grid-split-item">
-                    <p>Here are some of our features <img src="/public/img/icons/arrow-right.svg" alt=""></p>
+                    <p>A peek of who we are and what we do</p>
                 </div>
             </div>
             <div class="split">
@@ -354,9 +354,9 @@
 
     <footer>
         <div class="footer-content copy"><p>Smoove &copy; 2021</p></div>
-        <div class="footer-content"><a href="#">Contact</a></div>
-        <div class="footer-content"><a href="#">Information</a></div>
-        <div class="footer-content"><a href="#">Geely</a></div>
+        <div class="footer-content contact"><a href="#">Contact</a></div>
+        <div class="footer-content information"><a href="#">Information</a></div>
+        <div class="footer-content company"><a href="#">Geely</a></div>
         <div class="footer-content social">
             <div class="social-icon">
                 <a href="">
