Updated hero video

--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
     <main>
         <section class="hero">
             <!--<img src="https://via.placeholder.com/2400x1600" alt="" class="hero-img">-->
-            <video src="/public/img/hero.webm" autoplay muted loop></video>
+            <video autoplay muted loop>
+                <source src="/public/img/hero.webm" type="video/webm">
+            </video>
             <div class="hero-meta">
                 <div class="hero-title">
                     <span class="hero-normal">You are special.</span><br/>
