Added pagination to last slideshow, fixed text colors on light mode

--- a/index.html
+++ b/index.html
@@ -295,11 +295,36 @@
                 <div class="splide slideshow" id="slideshow">
                     <div class="splide__track">
                         <ul class="splide__list slideshow_list">
-                            <li class="splide__slide slide"><img src="/public/img/car/PNG/smoove_color/color_1.png" alt=""></li>
-                            <li class="splide__slide slide"><img src="/public/img/car/PNG/smoove_color/color_2.png" alt=""></li>
-                            <li class="splide__slide slide"><img src="/public/img/car/PNG/smoove_color/color_3.png" alt=""></li>
-                            <li class="splide__slide slide"><img src="/public/img/car/PNG/smoove_color/color_4.png" alt=""></li>
-                            <li class="splide__slide slide"><img src="/public/img/car/PNG/smoove_color/color_5.png" alt=""></li>
+                            <li class="splide__slide slide">
+                                <img src="/public/img/car/PNG/smoove_color/color_1.png" alt="">
+                                <div>
+                                    <p>1/5</p>
+                                </div>
+                            </li>
+                            <li class="splide__slide slide">
+                                <img src="/public/img/car/PNG/smoove_color/color_2.png" alt="">
+                                <div>
+                                    <p>2/5</p>
+                                </div>
+                            </li>
+                            <li class="splide__slide slide">
+                                <img src="/public/img/car/PNG/smoove_color/color_3.png" alt="">
+                                <div>
+                                    <p>3/5</p>
+                                </div>
+                            </li>
+                            <li class="splide__slide slide">
+                                <img src="/public/img/car/PNG/smoove_color/color_4.png" alt="">
+                                <div>
+                                    <p>4/5</p>
+                                </div>
+                            </li>
+                            <li class="splide__slide slide">
+                                <img src="/public/img/car/PNG/smoove_color/color_5.png" alt="">
+                                <div>
+                                    <p>5/5</p>
+                                </div>
+                            </li>
                         </ul>
                     </div>
                 </div>
