--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
                     <button class="hero-button open-modal">Enter lottery</button>
                 </div>
             </div>
-            <a href="#next" class="down-button button-round">
+            <!-- <a href="#next" class="down-button button-round">
                 <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M5.40002 11.4001L15 21.0001L24.6 11.4001" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>                    
-            </a>
+            </a> -->
             <div class="dark-mode">
                 <p>
                     Dark mode 
