Optimized all images

--- a/index.html
+++ b/index.html
@@ -74,8 +74,7 @@
             </video>
             <div class="hero-meta">
                 <div class="hero-title">
-                    <span class="hero-normal">You are special.</span><br/>
-                    <span class="hero-bold">Smoove.</span>
+                    <h1>You are special.<br />Smoove.</h1>
                 </div>
                 <div class="text-container">
                     <div class="hero-text">
@@ -107,11 +106,11 @@
         </section>
         <section class="big-img" id="next">
             <!-- https://via.placeholder.com/1500x750 -->
-            <img src="/public/img/car/PNG/Smoove_people_Final.png" alt="">
+            <img src="/public/img/car/Smoove_people_Final.jpg" alt="">
         </section>
         <section class="info">
             <div class="container">
-                <img src="/public/img/car/PNG/Smove_moving_final.png" alt="">
+                <img src="/public/img/car/Smove_moving_final.jpg" alt="">
                 <h3 class="info-title">Geely is bringing car driving to the next level. We are on the go for the future.</h3>
                 <div class="info-text-container">
                     <div class="info-text">
@@ -152,11 +151,11 @@
                 </div>
             </div>
             <div class="split">
-                <img src="/public/img/car/JPG/exterior_pc_post_purple.jpg" alt="">
+                <img src="/public/img/car/exterior_pc_post_purple.jpg" alt="">
                 <div class="split-title">Exterior</div>
             </div>
             <div class="split">
-                <img src="/public/img/car/JPG/interior_post_purple.jpg" alt="">
+                <img src="/public/img/car/interior_post_purple.jpg" alt="">
                 <div class="split-title">Interior</div>
             </div>
         </section>
@@ -167,7 +166,7 @@
                     <div class="splide__track">
                         <ul class="splide__list slideshow_list">
                             <li class="splide__slide slide first-slide">
-                                <img src="/public/img/car/JPG/feature_1.jpg" alt="">
+                                <img src="/public/img/car/feature_1.jpg" alt="">
                                 <div>
                                     <p>Quad LEDX headlights&trade;</p>
                                     <svg width="221" height="44" viewBox="0 0 221 44" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -176,7 +175,7 @@
                                 </div>
                             </li>
                             <li class="splide__slide slide second-slide">
-                                <img src="/public/img/car/JPG/feature_2.jpg" alt="">
+                                <img src="/public/img/car/feature_2.jpg" alt="">
                                 <div>
                                     <p>20" ecocarbon&trade; rims</p>
                                     <svg width="195" height="35" viewBox="0 0 195 35" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -185,7 +184,7 @@
                                 </div>
                             </li>
                             <li class="splide__slide slide third-slide">
-                                <img src="/public/img/car/JPG/feature_3.jpg" alt="">
+                                <img src="/public/img/car/feature_3.jpg" alt="">
                                 <div>
                                     <p>Indicating breaklights&trade;</p>
                                     <svg width="195" height="35" viewBox="0 0 195 35" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -194,7 +193,7 @@
                                 </div>
                             </li>
                             <li class="splide__slide slide fourth-slide">
-                                <img src="/public/img/car/JPG/feature_4.jpg" alt="">
+                                <img src="/public/img/car/feature_4.jpg" alt="">
                                 <div>
                                     <p>Antiglare&trade; headlights</p>
                                     <svg width="213" height="65" viewBox="0 0 213 65" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -209,7 +208,7 @@
                     <div class="splide__track">
                         <ul class="splide__list slideshow_list">
                             <li class="splide__slide slide first-slide">
-                                <img src="/public/img/car/JPG/feature_1.jpg" alt="">
+                                <img src="/public/img/car/feature_1.jpg" alt="">
                                 <div>
                                     <p>Quad LEDX headlights&trade;</p>
                                     <svg width="221" height="44" viewBox="0 0 221 44" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -218,7 +217,7 @@
                                 </div>
                             </li>
                             <li class="splide__slide slide second-slide">
-                                <img src="/public/img/car/JPG/feature_2.jpg" alt="">
+                                <img src="/public/img/car/feature_2.jpg" alt="">
                                 <div>
                                     <p>20" ecocarbon&trade; rims</p>
                                     <svg width="195" height="35" viewBox="0 0 195 35" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -227,7 +226,7 @@
                                 </div>
                             </li>
                             <li class="splide__slide slide third-slide">
-                                <img src="/public/img/car/JPG/feature_3.jpg" alt="">
+                                <img src="/public/img/car/feature_3.jpg" alt="">
                                 <div>
                                     <p>Indicating breaklights&trade;</p>
                                     <svg width="195" height="35" viewBox="0 0 195 35" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -236,7 +235,7 @@
                                 </div>
                             </li>
                             <li class="splide__slide slide fourth-slide">
-                                <img src="/public/img/car/JPG/feature_4.jpg" alt="">
+                                <img src="/public/img/car/feature_4.jpg" alt="">
                                 <div>
                                     <p>Antiglare&trade; headlights</p>
                                     <svg width="213" height="65" viewBox="0 0 213 65" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -296,31 +295,31 @@
                     <div class="splide__track">
                         <ul class="splide__list slideshow_list">
                             <li class="splide__slide slide">
-                                <img src="/public/img/car/PNG/smoove_color/color_1.png" alt="">
+                                <img src="/public/img/car/color_1.jpg" alt="">
                                 <div>
                                     <p>1/5</p>
                                 </div>
                             </li>
                             <li class="splide__slide slide">
-                                <img src="/public/img/car/PNG/smoove_color/color_2.png" alt="">
+                                <img src="/public/img/car/color_2.jpg" alt="">
                                 <div>
                                     <p>2/5</p>
                                 </div>
                             </li>
                             <li class="splide__slide slide">
-                                <img src="/public/img/car/PNG/smoove_color/color_3.png" alt="">
+                                <img src="/public/img/car/color_3.jpg" alt="">
                                 <div>
                                     <p>3/5</p>
                                 </div>
                             </li>
                             <li class="splide__slide slide">
-                                <img src="/public/img/car/PNG/smoove_color/color_4.png" alt="">
+                                <img src="/public/img/car/color_4.jpg" alt="">
                                 <div>
                                     <p>4/5</p>
                                 </div>
                             </li>
                             <li class="splide__slide slide">
-                                <img src="/public/img/car/PNG/smoove_color/color_5.png" alt="">
+                                <img src="/public/img/car/color_5.jpg" alt="">
                                 <div>
                                     <p>5/5</p>
                                 </div>
