--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 </head>
 <body class="dark">
     <header id="header">
-        <div class="logo"><img src="/public/img/logo_white.svg" alt=""></div>
+        <div class="logo"><img src="/public/img/logo_white.svg" alt="Smoove"></div>
         <nav>
-            <div class="hamburger"><img src="/public/img/icons/hamburger.svg" alt=""></div>
+            <div class="hamburger"><img src="/public/img/icons/hamburger.svg" alt="Hamburger menu"></div>
             <div class="mobile-nav-container">
-                <div class="mobile-nav-close" id="close"><img src="/public/img/icons/close.svg" alt=""></div>
+                <div class="mobile-nav-close" id="close"><img src="/public/img/icons/close.svg" alt="Close button"></div>
                 <ul class="mobile-nav">
                     <li class="nav-item active">Our car</li>
                     <li class="nav-item">About us</li>
@@ -71,7 +71,8 @@
         <section class="hero">
             <!--<img src="https://via.placeholder.com/2400x1600" alt="" class="hero-img">-->
             <video autoplay muted loop>
-                <source src="/public/img/hero.webm" type="video/webm">
+                <source src="/public/img/hero.webm" type="video/webm" alt="Animation going around the Smoove Mono.">
+                <img src="/public/img/hero_fallback.jpg" alt="Front view of the Smoove Mono">
             </video>
             <div class="hero-meta">
                 <div class="hero-title">
@@ -107,11 +108,11 @@
         </section>
         <section class="big-img" id="next">
             <!-- https://via.placeholder.com/1500x750 -->
-            <img src="/public/img/car/Smoove_people_Final.jpg" alt="">
+            <img src="/public/img/car/Smoove_people_Final.jpg" alt="The Smoove Mono by a gas station at night with a man about to enter the car.">
         </section>
         <section class="info">
             <div class="container">
-                <img src="/public/img/car/Smove_moving_final.jpg" alt="">
+                <img src="/public/img/car/Smove_moving_final.jpg" alt="The Smoove Mono going through a city at night with a blurry background.">
                 <h3 class="info-title">Geely is bringing car driving to the next level. We are on the go for the future.</h3>
                 <div class="info-text-container">
                     <div class="info-text">
@@ -152,11 +153,11 @@
                 </div>
             </div>
             <div class="split">
-                <img src="/public/img/car/exterior_pc_post_purple.jpg" alt="">
+                <img src="/public/img/car/exterior_pc_post_purple.jpg" alt="Back bumper of the Smoove Mono with pink rear headlights.">
                 <div class="split-title">Exterior</div>
             </div>
             <div class="split">
-                <img src="/public/img/car/interior_post_purple.jpg" alt="">
+                <img src="/public/img/car/interior_post_purple.jpg" alt="Interior of the Smoove Mono with pink lights in the dashboard and steering wheel.">
                 <div class="split-title">Interior</div>
             </div>
         </section>
@@ -167,7 +168,7 @@
                     <div class="splide__track">
                         <ul class="splide__list slideshow_list">
                             <li class="splide__slide slide first-slide">
-                                <img src="/public/img/car/feature_1.jpg" alt="">
+                                <img src="/public/img/car/feature_1.jpg" alt="Front view of the Smoove Mono showing off the cars headlights.">
                                 <div>
                                     <p>Quad LEDX headlights&trade;</p>
                                     <svg width="221" height="44" viewBox="0 0 221 44" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -176,7 +177,7 @@
                                 </div>
                             </li>
                             <li class="splide__slide slide second-slide">
-                                <img src="/public/img/car/feature_2.jpg" alt="">
+                                <img src="/public/img/car/feature_2.jpg" alt="Side view of the Smoove Mono showing off the rims of the car.">
                                 <div>
                                     <p>20" ecocarbon&trade; rims</p>
                                     <svg width="195" height="35" viewBox="0 0 195 35" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -185,7 +186,7 @@
                                 </div>
                             </li>
                             <li class="splide__slide slide third-slide">
-                                <img src="/public/img/car/feature_3.jpg" alt="">
+                                <img src="/public/img/car/feature_3.jpg" alt="Rear view of the Smoove Mono showing off the back headlights of the car.">
                                 <div>
                                     <p>Indicating breaklights&trade;</p>
                                     <svg width="195" height="35" viewBox="0 0 195 35" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -194,7 +195,7 @@
                                 </div>
                             </li>
                             <li class="splide__slide slide fourth-slide">
-                                <img src="/public/img/car/feature_4.jpg" alt="">
+                                <img src="/public/img/car/feature_4.jpg" alt="Close up of the front headlight of the Smoove Mono.">
                                 <div>
                                     <p>Antiglare&trade; headlights</p>
                                     <svg width="213" height="65" viewBox="0 0 213 65" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -209,7 +210,7 @@
                     <div class="splide__track">
                         <ul class="splide__list slideshow_list">
                             <li class="splide__slide slide first-slide">
-                                <img src="/public/img/car/feature_1.jpg" alt="">
+                                <img src="/public/img/car/feature_1.jpg" alt="Front view of the Smoove Mono showing off the cars headlights.">
                                 <div>
                                     <p>Quad LEDX headlights&trade;</p>
                                     <svg width="221" height="44" viewBox="0 0 221 44" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -218,7 +219,7 @@
                                 </div>
                             </li>
                             <li class="splide__slide slide second-slide">
-                                <img src="/public/img/car/feature_2.jpg" alt="">
+                                <img src="/public/img/car/feature_2.jpg" alt="Side view of the Smoove Mono showing off the rims of the car.">
                                 <div>
                                     <p>20" ecocarbon&trade; rims</p>
                                     <svg width="195" height="35" viewBox="0 0 195 35" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -227,7 +228,7 @@
                                 </div>
                             </li>
                             <li class="splide__slide slide third-slide">
-                                <img src="/public/img/car/feature_3.jpg" alt="">
+                                <img src="/public/img/car/feature_3.jpg" alt="Rear view of the Smoove Mono showing off the back headlights of the car.">
                                 <div>
                                     <p>Indicating breaklights&trade;</p>
                                     <svg width="195" height="35" viewBox="0 0 195 35" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -236,7 +237,7 @@
                                 </div>
                             </li>
                             <li class="splide__slide slide fourth-slide">
-                                <img src="/public/img/car/feature_4.jpg" alt="">
+                                <img src="/public/img/car/feature_4.jpg" alt="Close up of the front headlight of the Smoove Mono.">
                                 <div>
                                     <p>Antiglare&trade; headlights</p>
                                     <svg width="213" height="65" viewBox="0 0 213 65" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -266,10 +267,10 @@
             <h2>The Smoove photo mono book</h2>
             <div class="half-split-container">
                 <div class="split">
-                    <img src="/public/img/merch/book_1.png" alt="" class="split-img">
+                    <img src="/public/img/merch/book_1.png" alt="Front of the photo book for the Smoove Mono moving away in a sunset." class="split-img">
                 </div>
                 <div class="split">
-                    <img src="/public/img/merch/book_2.png" alt="" class="split-img">
+                    <img src="/public/img/merch/book_2.png" alt="Back of the photo book for the Smoove Mono showing a sunset." class="split-img">
                 </div>
             </div>
         </section>
@@ -286,7 +287,7 @@
                     <button>Shop</button>
                 </div>
                 <div class="split">
-                    <img src="/public/img/merch/clock.png" alt="" class="split-img">
+                    <img src="/public/img/merch/clock.png" alt="Smartwatch staning up with the Smoove logo on the screen." class="split-img">
                 </div>
             </div>
         </section>
@@ -296,31 +297,31 @@
                     <div class="splide__track">
                         <ul class="splide__list slideshow_list">
                             <li class="splide__slide slide">
-                                <img src="/public/img/car/color_1.jpg" alt="">
+                                <img src="/public/img/car/color_1.jpg" alt="The Smoove Mono in the color blue standing in a tunnel.">
                                 <div>
                                     <p>1/5</p>
                                 </div>
                             </li>
                             <li class="splide__slide slide">
-                                <img src="/public/img/car/color_2.jpg" alt="">
+                                <img src="/public/img/car/color_2.jpg" alt="The Smoove Mono in the color pink standing in a tunnel.">
                                 <div>
                                     <p>2/5</p>
                                 </div>
                             </li>
                             <li class="splide__slide slide">
-                                <img src="/public/img/car/color_3.jpg" alt="">
+                                <img src="/public/img/car/color_3.jpg" alt="The Smoove Mono in the color turquoise standing in a tunnel.">
                                 <div>
                                     <p>3/5</p>
                                 </div>
                             </li>
                             <li class="splide__slide slide">
-                                <img src="/public/img/car/color_4.jpg" alt="">
+                                <img src="/public/img/car/color_4.jpg" alt="The Smoove Mono in the color black standing in a tunnel.">
                                 <div>
                                     <p>4/5</p>
                                 </div>
                             </li>
                             <li class="splide__slide slide">
-                                <img src="/public/img/car/color_5.jpg" alt="">
+                                <img src="/public/img/car/color_5.jpg" alt="The Smoove Mono in the color purple standing in a tunnel.">
                                 <div>
                                     <p>5/5</p>
                                 </div>
@@ -388,17 +389,17 @@
         <div class="footer-content social">
             <div class="social-icon">
                 <a href="">
-                    <img src="/public/img/social/facebook.svg" alt="">
+                    <img src="/public/img/social/facebook.svg" alt="Facebook icon">
                 </a>
             </div>
             <div class="social-icon">
                 <a href="">
-                    <img src="/public/img/social/instagram.svg" alt="">
+                    <img src="/public/img/social/instagram.svg" alt="Instagram icon">
                 </a>
             </div>
             <div class="social-icon">
                 <a href="">
-                    <img src="/public/img/social/youtube.svg" alt="">
+                    <img src="/public/img/social/youtube.svg" alt="Youtube icon">
                 </a>
             </div>
         </div>
